alignment fix

--- a/stylesheet/portfolio.css
+++ b/stylesheet/portfolio.css
@@ -275,8 +275,8 @@ footer {
 
 .container2 {
     width:40%;
-    float: right;
-
+    
+    
     padding-left: 50px;
     padding-bottom: -50px;
     text-align: left;
